--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
-    <string name="app_name">SocialTest</string>
+    <string name="app_name">Social Test</string>
+    <string name="no_connection">No network connection</string>
+    <string name="something_wrong">Something wrong</string>
+
+    <string name="user_name">User Name</string>
+    <string name="email_address">Email Address</string>
+    <string name="phone_no">Phone No</string>
+
 </resources>
