--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,8 @@
     <string name="user_name">User Name</string>
     <string name="email_address">Email Address</string>
     <string name="phone_no">Phone No</string>
+    <string name="website">Website</string>
+
+    <string name="comment">Comment</string>
 
 </resources>
